add example of array utilisation importance due to humongous allocations